--- a/public/global.css
+++ b/public/global.css
@@ -12,7 +12,7 @@ canvas {
 }
 
 * {
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Do Hyeon", sans-serif;
   box-sizing: border-box;
 }
 
