--- a/global.css
+++ b/global.css
@@ -44,7 +44,16 @@ a {
 a:hover {
   background-color: #2266ff;
 }
+a[disabled] {
+  background-color: #a0a0a0;
+  cursor: no-drop;
+}
 
 .link-wrapper {
   display: flex;
+}
+
+.sub-title {
+  font-size: 17px;
+  font-weight: 100;
 }
